Adds Cert Makefile + Refactors for new format

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,2 +1,2 @@
 client:
-	python client.py 127.0.0.1 8000 ../certs/server.pem ../certs/client.pem
+	python client.py 127.0.0.1 8000 ../certs/rootCA.crt ../certs/client.crt ../certs/client.key
