--- a/server/Makefile
+++ b/server/Makefile
@@ -1,2 +1,2 @@
 server:
-	python server.py 8000 ../certs/server.pem ../certs/*
+	python server.py 8000 ../certs/server.crt ../certs/server.key ../certs/rootCA.crt
